--- a/src/main/resources/templates/admin/order/add-order.html
+++ b/src/main/resources/templates/admin/order/add-order.html
@@ -65,8 +65,7 @@
 		<!-- Main Sidebar Container -->
 		<aside class="main-sidebar sidebar-dark-primary elevation-4">
 			<!-- Brand Logo -->
-			<a th:href="@{/admin}" class="brand-link"> 
-			<img
+			<a th:href="@{/admin}" class="brand-link"> <img
 				src="/admin/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
 				class="brand-image img-circle elevation-3" style="opacity: .8">
 				<span class="brand-text font-weight-light">Admin</span>
@@ -81,7 +80,8 @@
 							class="img-circle elevation-2" alt="User Image">
 					</div>
 					<div class="info">
-						<a th:href="@{/admin/profile/{id}}" class="d-block">Alexander Pierce</a>
+						<a th:href="@{/admin/profile/{id}}" class="d-block">Alexander
+							Pierce</a>
 					</div>
 				</div>
 
@@ -210,7 +210,10 @@
 				</div>
 				<!-- /.container-fluid -->
 			</div>
-
+			<section class="content">
+			
+			
+			</section>
 		</div>
 		<!-- /.content-wrapper -->
 		<footer class="main-footer">
