--- a/src/main/resources/templates/admin/user/users.html
+++ b/src/main/resources/templates/admin/user/users.html
@@ -65,8 +65,7 @@
 		<!-- Main Sidebar Container -->
 		<aside class="main-sidebar sidebar-dark-primary elevation-4">
 			<!-- Brand Logo -->
-			<a th:href="@{/admin}" class="brand-link"> 
-			<img
+			<a th:href="@{/admin}" class="brand-link"> <img
 				src="/admin/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
 				class="brand-image img-circle elevation-3" style="opacity: .8">
 				<span class="brand-text font-weight-light">Admin</span>
@@ -81,7 +80,8 @@
 							class="img-circle elevation-2" alt="User Image">
 					</div>
 					<div class="info">
-						<a th:href="@{/admin/profile/{id}}" class="d-block">Alexander Pierce</a>
+						<a th:href="@{/admin/profile/{id}}" class="d-block">Alexander
+							Pierce</a>
 					</div>
 				</div>
 
@@ -190,27 +190,71 @@
 
 		<!-- Content Wrapper. Contains page content -->
 		<div class="content-wrapper">
-
-			<div class="content-header">
-				<div class="container-fluid">
-					<div class="row mb-2">
-						<div class="col-sm-6">
-							<h1 class="m-0">Dashboard</h1>
+			<section class="content">
+				<div class="content-header">
+					<div class="container-fluid">
+						<div class="row mb-2">
+							<div class="col-sm-6">
+								<h1 class="m-0">Users</h1>
+							</div>
+							<!-- /.col -->
+							<div class="col-sm-6">
+								<ol class="breadcrumb float-sm-right">
+									<li class="breadcrumb-item"><a th:href="@{/admin}">Home</a></li>
+									<li class="breadcrumb-item active">Users</li>
+								</ol>
+							</div>
+							<!-- /.col -->
 						</div>
-						<!-- /.col -->
-						<div class="col-sm-6">
-							<ol class="breadcrumb float-sm-right">
-								<li class="breadcrumb-item"><a th:href="@{/admin}">Home</a></li>
-								<li class="breadcrumb-item active">Dashboard</li>
-							</ol>
-						</div>
-						<!-- /.col -->
+						<!-- /.row -->
 					</div>
-					<!-- /.row -->
+					<!-- /.container-fluid -->
 				</div>
-				<!-- /.container-fluid -->
-			</div>
+				<section class="content"></section>
+				<div class="row">
+					<div class="col-12">
+						<div class="card">
+							<div class="card-header">
+								<h3 class="card-title">List All User</h3>
 
+								<div class="card-tools">
+									<a th:href="@{/admin/users/add-user}" class="btn btn-info">Add</a>
+								</div>
+							</div>
+							<!-- /.card-header -->
+							<div class="card-body table-responsive p-0">
+								<table class="table table-hover text-nowrap table-bordered">
+									<thead>
+										<tr>
+											<th>ID</th>
+											<th>Username</th>
+											<th>Email</th>
+											<th>Role</th>
+											<th>Action</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr th:each="userDTO : ${userDTOs}">
+											<td th:text="${userDTO.id}"></td>
+											<td th:text="${userDTO.username}"></td>
+											<td th:text="${userDTO.email}"></td>
+											<td th:text="${userDTO.roleDTO.name}"></td>
+											<td><a
+												th:href="@{/admin/users/edit-user/{id}(id=${userDTO.id})}"
+												class="btn btn-success">Edit</a> <a
+												th:href="@{/admin/users/delete-user/{id}(id=${userDTO.id})}"
+												class="btn btn-danger">Delete</a></td>
+										</tr>
+
+									</tbody>
+								</table>
+							</div>
+							<!-- /.card-body -->
+						</div>
+						<!-- /.card -->
+					</div>
+				</div>
+			</section>
 		</div>
 		<!-- /.content-wrapper -->
 		<footer class="main-footer">
