--- a/src/main/resources/templates/admin/category/categories.html
+++ b/src/main/resources/templates/admin/category/categories.html
@@ -211,47 +211,49 @@
 				<!-- /.container-fluid -->
 			</div>
 
-			<div class="row">
-				<div class="col-12">
-					<div class="card">
-						<div class="card-header">
-							<h3 class="card-title">List All Category</h3>
+			<section class="content">
+				<div class="row">
+					<div class="col-12">
+						<div class="card">
+							<div class="card-header">
+								<h3 class="card-title">List All Category</h3>
 
-							&nbsp &nbsp &nbsp &nbsp
-								<a class="btn btn-info" th:href="@{/admin/categories/add-category}">Add</a>
-							
+								&nbsp &nbsp &nbsp &nbsp <a class="btn btn-info"
+									th:href="@{/admin/categories/add-category}">Add</a>
+
+							</div>
+							<!-- /.card-header -->
+							<div class="card-body table-responsive p-0">
+								<table class="table table-bordered table-hover text-nowrap">
+									<thead>
+										<tr>
+											<th>ID</th>
+											<th>Name</th>
+											<th>Description</th>
+											<th>Action</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr th:each="categoryDTO : ${categoryDTOs}">
+											<td th:text="${categoryDTO.id}"></td>
+											<td th:text="${categoryDTO.name}"></td>
+											<td th:text="${categoryDTO.description}"></td>
+											<td><a class="btn btn-info"
+												th:href="@{/admin/categories/edit-category/{id}(id=${categoryDTO.id})}">Edit</a>
+												<a class="btn btn-danger"
+												th:href="@{/admin/categories/delete-category/{id}(id=${categoryDTO.id})}">Delete</a>
+											</td>
+										</tr>
+
+									</tbody>
+								</table>
+							</div>
+							<!-- /.card-body -->
 						</div>
-						<!-- /.card-header -->
-						<div class="card-body table-responsive p-0">
-							<table class="table table-bordered table-hover text-nowrap">
-								<thead>
-									<tr>
-										<th>ID</th>
-										<th>Name</th>
-										<th>Description</th>
-										<th>Action</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr th:each="categoryDTO : ${categoryDTOs}">
-										<td th:text="${categoryDTO.id}"></td>
-										<td th:text="${categoryDTO.name}"></td>
-										<td th:text="${categoryDTO.description}"></td>
-										<td>
-											<a class="btn btn-info" th:href="@{/admin/categories/edit-category/{id}(id=${categoryDTO.id})}">Edit</a>
-											<a class="btn btn-danger" th:href="@{/admin/categories/delete-category/{id}(id=${categoryDTO.id})}">Delete</a>
-										</td>
-									</tr>
-									
-								</tbody>
-							</table>
-						</div>
-						<!-- /.card-body -->
+						<!-- /.card -->
 					</div>
-					<!-- /.card -->
 				</div>
-			</div>
-
+			</section>
 		</div>
 		<!-- /.content-wrapper -->
 		<footer class="main-footer">
