--- a/src/main/resources/templates/admin/order/orders.html
+++ b/src/main/resources/templates/admin/order/orders.html
@@ -211,6 +211,11 @@
 				<!-- /.container-fluid -->
 			</div>
 
+			<section class="content">
+			
+			
+			</section>
+
 		</div>
 		<!-- /.content-wrapper -->
 		<footer class="main-footer">
