--- a/src/main/resources/templates/admin/register.html
+++ b/src/main/resources/templates/admin/register.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container">
 
-		<form th:action="@{/register}" method="post" th:object="${user}">
+		<form th:action="@{/admin/register}" method="post" th:object="${user}">
 		
 			<div th:if="${param.success}">
 				<div class="alert alert-success">You have been registered successfull</div>
