--- a/src/main/resources/templates/client/login.html
+++ b/src/main/resources/templates/client/login.html
@@ -1,43 +1,312 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html class="no-js"
+      lang="zxx" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Shopping</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon"
+          href="/client/assets/img/favicon.ico">
 
-	<form action="../../index3.html" method="post">
-		<div class="input-group mb-3">
-			<input type="email" class="form-control" placeholder="Email">
-			<div class="input-group-append">
-				<div class="input-group-text">
-					<span class="fas fa-envelope"></span>
-				</div>
-			</div>
-		</div>
-		<div class="input-group mb-3">
-			<input type="password" class="form-control" placeholder="Password">
-			<div class="input-group-append">
-				<div class="input-group-text">
-					<span class="fas fa-lock"></span>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-8">
-				<div class="icheck-primary">
-					<input type="checkbox" id="remember"> <label for="remember">
-						Remember Me </label>
-				</div>
-			</div>
-			<!-- /.col -->
-			<div class="col-4">
-				<button type="submit" class="btn btn-primary btn-block">Sign
-					In</button>
-			</div>
-			<!-- /.col -->
-		</div>
-	</form>
+    <!-- CSS here -->
+    <link rel="stylesheet" href="/client/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/client/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/client/assets/css/flaticon.css">
+    <link rel="stylesheet" href="/client/assets/css/slicknav.css">
+    <link rel="stylesheet" href="/client/assets/css/animate.min.css">
+    <link rel="stylesheet" href="/client/assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="/client/assets/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="/client/assets/css/themify-icons.css">
+    <link rel="stylesheet" href="/client/assets/css/slick.css">
+    <link rel="stylesheet" href="/client/assets/css/nice-select.css">
+    <link rel="stylesheet" href="/client/assets/css/style.css">
+</head>
+
+<body>
+<!--? Preloader Start -->
+<div id="preloader-active">
+    <div
+            class="preloader d-flex align-items-center justify-content-center">
+        <div class="preloader-inner position-relative">
+            <div class="preloader-circle"></div>
+            <div class="preloader-img pere-text">
+                <img src="/client/assets/img/logo/logo.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Preloader Start -->
+<header>
+    <!-- Header Start -->
+    <div class="header-area">
+        <div class="main-header header-sticky">
+            <div class="container-fluid">
+                <div class="menu-wrapper">
+                    <!-- Logo -->
+                    <div class="logo">
+                        <a th:href="@{/}"><img
+                                src="/client/assets/img/logo/logo.png" alt=""></a>
+                    </div>
+                    <!-- Main-menu -->
+                    <div class="main-menu d-none d-lg-block">
+                        <nav>
+                            <ul id="navigation">
+                                <li><a th:href="@{/}">Home</a></li>
+                                <li><a href="#">Category</a>
+                                    <ul class="submenu">
+                                        <li th:each="categoryDTO : ${categoryDTOs}"><a
+                                                th:href="@{/category/{name}(name=${categoryDTO.name})}"
+                                                th:text="${categoryDTO.name}"></a></li>
+                                    </ul>
+                                </li>
+                                <li th:if="${session.username != null}"><a th:href="@{/profile}">Profile</a></li>
+                                <li th:if="${session.username == null}"><a th:href="@{/login}">Profile</a></li>
+                                <li th:if="${session.username != null}"><a th:href="@{/my-cart}">My cart</a></li>
+                                <li th:if="${session.username == null}"><a th:href="@{/login}">My cart</a></li>
+                                <li th:if="${session.username != null}"><a th:href="@{/my-order}">My order</a></li>
+                                <li th:if="${session.username == null}"><a th:href="@{/login}">My order</a></li>
+                                <li><a th:href="@{/contact}">Contact</a></li>
+                                <li th:if="${session.username != null}"><a th:href="@{/logout}">Logout</a></li>
+                                <li th:if="${session.username == null}"><a th:href="@{/login}">Login</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <!-- Header Right -->
+                    <div class="header-right">
+                        <ul>
+                            <li>
+                                <div class="nav-search search-switch">
+                                    <span class="flaticon-search"></span>
+                                </div>
+                            </li>
+                            <li th:if="${session.username == null}"><a th:href="@{/login}"><span
+                                    class="flaticon-user"></span></a></li>
+                            <li th:if="${session.username != null}"><a th:href="@{/profile}"><span
+                                    class="flaticon-user"></span></a></li>
+                            <li th:if="${session.username == null}"><a th:href="@{/login}"><span
+                                    class="flaticon-shopping-cart"></span></a></li>
+                            <li th:if="${session.username != null}"><a th:href="@{/my-cart}"><span
+                                    class="flaticon-shopping-cart"></span></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Mobile Menu -->
+                <div class="col-12">
+                    <div class="mobile_menu d-block d-lg-none"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Header End -->
+</header>
+<main>
+
+<!--    <div class="hero-cap text-center">-->
+<!--        <h2 th:if="${session.username == null}" style="margin : 40px auto;">WELCOME TO OUR SHOP</h2>-->
+<!--        <h2 th:if="${session.username != null}" th:text="'WELCOME BACK ' +  ${session.username}"-->
+<!--            style="margin : 40px auto;"></h2>-->
+<!--    </div>-->
+
+    <section class="login_part" style="margin : 40px auto;">
+        <div class="container">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-md-6">
+                    <div class="login_part_text text-center">
+                        <div class="login_part_text_iner">
+                            <h2>New to our Shop?</h2>
+                            <p>There are advances being made in science and technology
+                                everyday, and a good example of this is the</p>
+                            <a th:href="@{/register}" class="btn_3">Create an Account</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <div class="login_part_form">
+                        <div class="login_part_form_iner">
+                            <h3 style="margin: 20px auto">Welcome Back ! <br>
+                                Please Sign in now</h3>
+                            <p style="margin: 20px auto" th:text="${error}"></p>
+                            <form class="row contact_form" th:action="@{/login}" method="post" th:object="${userDTO}" novalidate="novalidate">
+                                <div class="col-md-12 form-group p_star">
+                                    <input type="email" class="form-control" id="email" name="email" value=""
+                                           th:field="*{email}" placeholder="Email">
+                                </div>
+                                <div class="col-md-12 form-group p_star">
+                                    <input type="password" class="form-control" id="password" name="password" value=""
+                                           th:field="*{password}" placeholder="Password">
+                                </div>
+                                <div class="col-md-12 form-group">
+                                    <div class="creat_account d-flex align-items-center">
+                                        <input type="checkbox" id="f-option" name="selector">
+                                        <label for="f-option">Remember me</label>
+                                    </div>
+                                    <button type="submit" value="submit" class="btn_3">
+                                        log in
+                                    </button>
+                                    <a class="lost_pass" href="#">forget password?</a>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="shop-method-area">
+        <div class="container">
+            <div class="method-wrapper">
+
+            </div>
+        </div>
+    </div>
+    <!-- Shop Method End-->
+</main>
+<footer>
+    <!-- Footer Start-->
+    <div class="footer-area footer-padding">
+        <div class="container">
+            <div class="row d-flex justify-content-between">
+                <div class="col-xl-3 col-lg-3 col-md-5 col-sm-6">
+                    <div class="single-footer-caption mb-50">
+                        <div class="single-footer-caption mb-30">
+                            <!-- logo -->
+                            <div class="footer-logo">
+                                <a href="index.html"><img
+                                        src="/client/assets/img/logo/logo2_footer.png" alt=""></a>
+                            </div>
+                            <div class="footer-tittle">
+                                <div class="footer-pera">
+                                    <p>Asorem ipsum adipolor sdit amet, consectetur
+                                        adipisicing elitcf sed do eiusmod tem.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-3 col-sm-5">
+                    <div class="single-footer-caption mb-50">
+                        <div class="footer-tittle">
+                            <h4>Quick Links</h4>
+                            <ul>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#"> Offers & Discounts</a></li>
+                                <li><a href="#"> Get Coupon</a></li>
+                                <li><a href="#"> Contact Us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-7">
+                    <div class="single-footer-caption mb-50">
+                        <div class="footer-tittle">
+                            <h4>New Products</h4>
+                            <ul>
+                                <li><a href="#">Woman Cloth</a></li>
+                                <li><a href="#">Fashion Accessories</a></li>
+                                <li><a href="#"> Man Accessories</a></li>
+                                <li><a href="#"> Rubber made Toys</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-5 col-sm-7">
+                    <div class="single-footer-caption mb-50">
+                        <div class="footer-tittle">
+                            <h4>Support</h4>
+                            <ul>
+                                <li><a href="#">Frequently Asked Questions</a></li>
+                                <li><a href="#">Terms & Conditions</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">Report a Payment Issue</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Footer bottom -->
+            <div class="row align-items-center">
+                <div class="col-xl-7 col-lg-8 col-md-7">
+                    <div class="footer-copy-right">
+                        <p>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>
+                                document.write(new Date().getFullYear());
+                            </script>
+                            All rights reserved | This template is made with <i
+                                class="fa fa-heart" aria-hidden="true"></i> by <a
+                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
+                    </div>
+                </div>
+                <div class="col-xl-5 col-lg-4 col-md-5">
+                    <div class="footer-copy-right f-right">
+                        <!-- social -->
+                        <div class="footer-social">
+                            <a href="#"><i class="fab fa-twitter"></i></a> <a
+                                href="https://www.facebook.com/sai4ull"><i
+                                class="fab fa-facebook-f"></i></a> <a href="#"><i
+                                class="fab fa-behance"></i></a> <a href="#"><i
+                                class="fas fa-globe"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer End-->
+</footer>
+<!--? Search model Begin -->
+<div class="search-model-box">
+    <div class="h-100 d-flex align-items-center justify-content-center">
+        <div class="search-close-btn">+</div>
+        <form class="search-model-form">
+            <input type="text" id="search-input"
+                   placeholder="Searching key.....">
+        </form>
+    </div>
+</div>
+<!-- Search model end -->
+
+<!-- JS here -->
+<!-- All JS Custom Plugins Link Here here -->
+<script src="/client/assets/js/vendor/modernizr-3.5.0.min.js"></script>
+<!-- Jquery, Popper, Bootstrap -->
+<script src="/client/assets/js/vendor/jquery-1.12.4.min.js"></script>
+<script src="/client/assets/js/popper.min.js"></script>
+<script src="/client/assets/js/bootstrap.min.js"></script>
+<!-- Jquery Mobile Menu -->
+<script src="/client/assets/js/jquery.slicknav.min.js"></script>
+
+<!-- Jquery Slick , Owl-Carousel Plugins -->
+<script src="/client/assets/js/owl.carousel.min.js"></script>
+<script src="/client/assets/js/slick.min.js"></script>
+
+<!-- One Page, Animated-HeadLin -->
+<script src="/client/assets/js/wow.min.js"></script>
+<script src="/client/assets/js/animated.headline.js"></script>
+<script src="/client/assets/js/jquery.magnific-popup.js"></script>
+
+<!-- Scroll up, nice-select, sticky -->
+<script src="/client/assets/js/jquery.scrollUp.min.js"></script>
+<script src="/client/assets/js/jquery.nice-select.min.js"></script>
+<script src="/client/assets/js/jquery.sticky.js"></script>
+
+<!-- contact js -->
+<script src="/client/assets/js/contact.js"></script>
+<script src="/client/assets/js/jquery.form.js"></script>
+<script src="/client/assets/js/jquery.validate.min.js"></script>
+<script src="/client/assets/js/mail-script.js"></script>
+<script src="/client/assets/js/jquery.ajaxchimp.min.js"></script>
+
+<!-- Jquery Plugins, main Jquery -->
+<script src="/client/assets/js/plugins.js"></script>
+<script src="/client/assets/js/main.js"></script>
 
 </body>
 </html>
