--- a/src/main/resources/templates/client/product-detail.html
+++ b/src/main/resources/templates/client/product-detail.html
@@ -103,69 +103,52 @@
     <!-- Header End -->
 </header>
 <main>
-    <section class="popular-items">
+
         <div class="hero-cap text-center">
             <h2 th:if="${session.username == null}" style="margin : 40px auto;">WELCOME TO OUR SHOP</h2>
             <h2 th:if="${session.username != null}" th:text="'WELCOME BACK ' +  ${session.username}"
                 style="margin : 40px auto;"></h2>
         </div>
+
+
+    <div class="product_image_area"  style="margin : 40px auto;">
         <div class="container">
-            <div class="row product-btn justify-content-between mb-40">
-                <div class="properties__button">
-                    <!--Nav Button  -->
-
-                    <!--End Nav Button  -->
-                </div>
-                <!-- Grid and List view -->
-                <div class="grid-list-view"></div>
-                <!-- Select items -->
-                <div class="select-this">
-
-                </div>
-            </div>
-            <!-- Nav Card -->
-            <div class="tab-content" id="nav-tabContent">
-                <!-- card one -->
-                <div class="tab-pane fade show active" id="nav-home"
-                     role="tabpanel" aria-labelledby="nav-home-tab">
-                    <div class="row">
-                        <div th:each="productDTO : ${productDTOs}" class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                            <div class="single-popular-items mb-50 text-center">
-                                <div class="popular-img">
-                                    <img th:src="${productDTO.picture}" alt="">
-                                    <a th:if="${session.username == null}" th:href="@{/login}">
-                                        <div class="img-cap">
-                                            <span>Add to cart</span>
-                                        </div>
-                                    </a>
-                                    <a th:if="${session.username != null}" th:href="@{/my-cart}">
-                                        <div class="img-cap">
-                                            <span>Add to cart</span>
-                                        </div>
-                                    </a>
-                                    <div class="favorit-items">
-                                        <span class="flaticon-heart"></span>
-                                    </div>
-                                </div>
-                                <div class="popular-caption">
-                                    <h3>
-                                        <a th:href="@{/product-detail/{id}(id=${productDTO.id})}"
-                                           th:text="${productDTO.name}"></a>
-                                    </h3>
-                                    <span th:text="${#numbers.formatDecimal(productDTO.price, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></span>
-                                </div>
-                            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-md-6">
+                    <div class="product_img_slide owl-carousel">
+                        <div class="single_product_img">
+                            <img th:src="${productDTO.picture}" alt="#" class="img-fluid">
                         </div>
-
                     </div>
                 </div>
-
+                <div class="col-lg-6 col-md-6">
+                    <div class="single_product_text text-center">
+                        <h3 th:text="${productDTO.name}"></h3>
+                        <p th:text="${productDTO.description}"></p>
+                        <div class="card_area">
+                            <div class="product_count_area">
+                                <p>Quantity</p>
+                                <div class="product_count d-inline-block">
+                                    <span class="product_count_item inumber-decrement"> <i class="ti-minus"></i></span>
+                                    <input class="product_count_item input-number" type="text" value="1" min="0"
+                                           max="10">
+                                    <span class="product_count_item number-increment"> <i class="ti-plus"></i></span>
+                                </div>
+                                <p th:text="${#numbers.formatDecimal(productDTO.price, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></p>
+                            </div>
+                            <div th:if="${session.username != null}" class="add_to_cart">
+                                <a href="#" class="btn_3">add to cart</a>
+                            </div>
+                            <div th:if="${session.username == null}" class="add_to_cart">
+                                <a th:href="@{/login}" class="btn_3">add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- End Nav Card -->
         </div>
-    </section>
-    <!-- Latest Products End -->
-    <!--? Shop Method Start-->
+    </div>
+
     <div class="shop-method-area">
         <div class="container">
             <div class="method-wrapper">
@@ -177,7 +160,7 @@
 </main>
 <footer>
     <!-- Footer Start-->
-    <div class="footer-area footer-padding">
+    <div class="footer-area"  style="margin : 40px auto;">
         <div class="container">
             <div class="row d-flex justify-content-between">
                 <div class="col-xl-3 col-lg-3 col-md-5 col-sm-6">
