--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -1,46 +1,86 @@
+
 <!DOCTYPE html>
-<html   xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Admin | Log in</title>
+
+<!-- Google Font: Source Sans Pro -->
 <link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	crossorigin="anonymous">
-<title>Insert title here</title>
+	href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+<!-- Font Awesome -->
+<link rel="stylesheet"
+	href="/admin/plugins/fontawesome-free/css/all.min.css">
+<!-- icheck bootstrap -->
+<link rel="stylesheet"
+	href="/admin/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+<!-- Theme style -->
+<link rel="stylesheet" href="/admin/dist/css/adminlte.min.css">
 </head>
-<body>
-	<div class="container">
+<body class="hold-transition login-page">
+	<div class="login-box">
+		<div class="login-logo">
+			<b>Admin</b>
+		</div>
+		<!-- /.login-logo -->
+		<div class="card">
+			<div class="card-body login-card-body">
+				<p class="login-box-msg">Sign in to start your session</p>
 
-		<form th:action="@{/admin/login}"method="post" >
-			
-			<div th:if="${param.error}">
-				<div class="alert alert-danger">
-					Invalid Username or Password
-				</div>
-			</div>
-			
-			<div th:if="${param.logout}">
-				<div class="alert alert-info">
-					You have been logged out
-				</div>
-			</div>
-			
-			<div class="form-group">
-				<label for="username">Email address:</label> <input type="email"
-					name="username" class="form-control" placeholder="Enter email" id="username">
-			</div>
-			<div class="form-group">
-				<label for="pwd">Password:</label> <input type="password"
-					name="password" class="form-control" placeholder="Enter password" id="pwd">
-			</div>
-			<div class="form-group form-check">
-				<label class="form-check-label"> <input
-					class="form-check-input" type="checkbox"> Remember me
-				</label>
-			</div>
-			<button type="submit" class="btn btn-primary">Submit</button>
-		</form>
+				<form th:action="@{/admin/login}" method="post">
 
+					<div th:if="${param.error}">
+						<div class="alert alert-danger">Invalid Username or Password
+						</div>
+					</div>
+
+					<div th:if="${param.logout}">
+						<div class="alert alert-info">You have been logged out</div>
+					</div>
+
+					<div class="input-group mb-3">
+						<input name="username" type="email" class="form-control" placeholder="Email">
+						<div class="input-group-append">
+							<div class="input-group-text">
+								<span class="fas fa-envelope"></span>
+							</div>
+						</div>
+					</div>
+					<div class="input-group mb-3">
+						<input name="password" type="password" class="form-control" placeholder="Password">
+						<div class="input-group-append">
+							<div class="input-group-text">
+								<span class="fas fa-lock"></span>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+
+						<!-- /.col -->
+						<div class="col-4">
+							<button type="submit" class="btn btn-primary btn-block">Sign
+								In</button>
+						</div>
+						<!-- /.col -->
+					</div>
+				</form>
+
+
+				<!-- /.social-auth-links -->
+
+
+			</div>
+			<!-- /.login-card-body -->
+		</div>
 	</div>
+	<!-- /.login-box -->
+
+	<!-- jQuery -->
+	<script src="/admin/plugins/jquery/jquery.min.js"></script>
+	<!-- Bootstrap 4 -->
+	<script src="/admin/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<!-- AdminLTE App -->
+	<script src="/admin/dist/js/adminlte.min.js"></script>
 </body>
 </html>
