--- a/src/main/resources/templates/admin/product/products.html
+++ b/src/main/resources/templates/admin/product/products.html
@@ -45,152 +45,11 @@
 				alt="AdminLTELogo" height="60" width="60">
 		</div>
 
-		<!-- Navbar -->
-		<nav
-			class="main-header navbar navbar-expand navbar-white navbar-light">
-			<!-- Left navbar links -->
-			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link" data-widget="pushmenu"
-					href="#" role="button"><i class="fas fa-bars"></i></a></li>
-				<li class="nav-item d-none d-sm-inline-block"><a
-					th:href="@{/admin}" class="nav-link">Home</a></li>
-				<li class="nav-item d-none d-sm-inline-block"><a
-					href="https://www.facebook.com/hoangxq2k1" class="nav-link">Contact</a>
-				</li>
-				<li class="nav-item d-none d-sm-inline-block"><a
-					th:href="@{/admin/logout}" class="nav-link">Logout</a></li>
-			</ul>
+		<div th:insert="/admin/fragment/sidebar :: navbar"></div>
 
-		</nav>
-		<!-- /.navbar -->
-
-		<!-- Main Sidebar Container -->
-		<aside class="main-sidebar sidebar-dark-primary elevation-4">
-			<!-- Brand Logo -->
-			<a th:href="@{/admin}" class="brand-link"> <img
-				src="/admin/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
-				class="brand-image img-circle elevation-3" style="opacity: .8">
-				<span class="brand-text font-weight-light">Admin</span>
-			</a>
-
-			<!-- Sidebar -->
-			<div class="sidebar">
-				<!-- Sidebar user panel (optional) -->
-				<div class="user-panel mt-3 pb-3 mb-3 d-flex">
-					<div class="image">
-						<img src="/admin/dist/img/user2-160x160.jpg"
-							class="img-circle elevation-2" alt="User Image">
-					</div>
-					<div class="info">
-						<a href="#"
-							sec:authentication="principal.username" class="d-block"></a>
-					</div>
-				</div>
+		<aside th:insert="/admin/fragment/sidebar :: sidebar"></aside>
 
 
-				<!-- Sidebar Menu -->
-				<nav class="mt-2">
-					<ul class="nav nav-pills nav-sidebar flex-column"
-						data-widget="treeview" role="menu" data-accordion="false">
-						<!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
-
-						<li class="nav-item"><a href="#" class="nav-link"> <i
-								class="nav-icon fas fa-edit"></i>
-								<p>
-									Users <i class="fas fa-angle-left right"></i>
-								</p>
-						</a>
-							<ul class="nav nav-treeview">
-								<li class="nav-item"><a th:href="@{/admin/users}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>List</p>
-								</a></li>
-								<li class="nav-item"><a th:href="@{/admin/users/add-user}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>Add</p>
-								</a></li>
-							</ul></li>
-
-						<li class="nav-item"><a href="#" class="nav-link"> <i
-								class="nav-icon fas fa-edit"></i>
-								<p>
-									Categories <i class="fas fa-angle-left right"></i>
-								</p>
-						</a>
-							<ul class="nav nav-treeview">
-								<li class="nav-item"><a th:href="@{/admin/categories}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>List</p>
-								</a></li>
-								<li class="nav-item"><a
-									th:href="@{/admin/categories/add-category}" class="nav-link">
-										<i class="far fa-circle nav-icon"></i>
-										<p>Add</p>
-								</a></li>
-							</ul></li>
-
-						<li class="nav-item"><a href="#" class="nav-link"> <i
-								class="nav-icon fas fa-edit"></i>
-								<p>
-									Products <i class="fas fa-angle-left right"></i>
-								</p>
-						</a>
-							<ul class="nav nav-treeview">
-								<li class="nav-item"><a th:href="@{/admin/products}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>List</p>
-								</a></li>
-								<li class="nav-item"><a
-									th:href="@{/admin/products/add-product}" class="nav-link">
-										<i class="far fa-circle nav-icon"></i>
-										<p>Add</p>
-								</a></li>
-							</ul></li>
-
-						<li class="nav-item"><a href="#" class="nav-link"> <i
-								class="nav-icon fas fa-edit"></i>
-								<p>
-									Carts <i class="fas fa-angle-left right"></i>
-								</p>
-						</a>
-							<ul class="nav nav-treeview">
-								<li class="nav-item"><a th:href="@{/admin/carts}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>List</p>
-								</a></li>
-								<li class="nav-item"><a th:href="@{/admin/carts/add-cart}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>Add</p>
-								</a></li>
-							</ul></li>
-
-						<li class="nav-item"><a href="#" class="nav-link"> <i
-								class="nav-icon fas fa-edit"></i>
-								<p>
-									Orders <i class="fas fa-angle-left right"></i>
-								</p>
-						</a>
-							<ul class="nav nav-treeview">
-								<li class="nav-item"><a th:href="@{/admin/orders}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>List</p>
-								</a></li>
-								<li class="nav-item"><a
-									th:href="@{/admin/orders/add-order}" class="nav-link"> <i
-										class="far fa-circle nav-icon"></i>
-										<p>Add</p>
-								</a></li>
-							</ul></li>
-
-					</ul>
-				</nav>
-				<!-- /.sidebar-menu -->
-			</div>
-			<!-- /.sidebar -->
-		</aside>
-
-		<!-- Content Wrapper. Contains page content -->
 		<div class="content-wrapper">
 
 			<div class="content-header">
@@ -222,6 +81,18 @@
 								&nbsp &nbsp &nbsp &nbsp <a class="btn btn-info"
 									th:href="@{/admin/products/add-product}">Add</a>
 
+								<div class="card-tools">
+									<form th:action="@{/admin/products/search}" method="get" class="input-group input-group-sm"
+										style="width: 350px; height: 40px">
+										<input style="height: 40px" type="text" name="productName"
+											class="form-control float-right" placeholder="Search">
+										<div class="input-group-append">
+											<button type="submit" class="btn btn-default">
+												<i class="fas fa-search"></i>
+											</button>
+										</div>
+									</form>
+								</div>
 							</div>
 							<!-- /.card-header -->
 							<div class="card-body table-responsive p-0">
@@ -247,7 +118,10 @@
 											<td
 												th:text="${#numbers.formatDecimal(productDTO.price, 0, 'COMMA', 0, 'POINT') + ' VNĐ'}"></td>
 											<td th:text="${productDTO.description}"></td>
-											<td th:if="${productDTO.picture.length()!=0}" th:text="${productDTO.picture.substring(0, 20)} + '....'"></td>
+											<!-- <td th:if="${productDTO.picture.length()!=0}" th:text="${productDTO.picture.substring(0, 20)} + '....'"></td>-->
+
+											<td><img th:src="${productDTO.picture}"
+												style="height: 120px; width: 120px"></td>
 
 											<td><a class="btn btn-info"
 												th:href="@{/admin/products/edit-product/{id}(id=${productDTO.id})}">Edit</a>
@@ -258,6 +132,13 @@
 
 									</tbody>
 								</table>
+								<div th:if="${pageNumbers != null}" class="card-footer clearfix">
+									<ul class="pagination pagination-sm m-0 float-right">
+										<li th:each="page : ${#numbers.sequence(1, pageNumbers)}"
+											class="page-item"><a th:text="${page}" class="page-link"
+											th:href="@{/admin/products/page/{id}(id=${page})}"></a></li>
+									</ul>
+								</div>
 							</div>
 							<!-- /.card-body -->
 						</div>
@@ -266,17 +147,9 @@
 				</div>
 			</section>
 		</div>
-		<!-- /.content-wrapper -->
-		<footer class="main-footer">
-			<strong>Made by &nbsp <a href="https://fb.com/hoangxq2k1">Nguyen
-					Huy Hoang</a>&nbsp ...
-			</strong>
-			<div class="float-right d-none d-sm-inline-block">
-				<b>2022</b>
-			</div>
-		</footer>
 
-		<!-- Control Sidebar -->
+		<div th:insert="/admin/fragment/sidebar :: footer"></div>
+
 		<aside class="control-sidebar control-sidebar-dark">
 			<!-- Control sidebar content goes here -->
 		</aside>
