--- a/src/main/resources/templates/admin/user/edit-user.html
+++ b/src/main/resources/templates/admin/user/edit-user.html
@@ -45,152 +45,11 @@
 				alt="AdminLTELogo" height="60" width="60">
 		</div>
 
-		<!-- Navbar -->
-		<nav
-			class="main-header navbar navbar-expand navbar-white navbar-light">
-			<!-- Left navbar links -->
-			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link" data-widget="pushmenu"
-					href="#" role="button"><i class="fas fa-bars"></i></a></li>
-				<li class="nav-item d-none d-sm-inline-block"><a
-					th:href="@{/admin}" class="nav-link">Home</a></li>
-				<li class="nav-item d-none d-sm-inline-block"><a
-					href="https://www.facebook.com/hoangxq2k1" class="nav-link">Contact</a>
-				</li>
-				<li class="nav-item d-none d-sm-inline-block"><a
-					th:href="@{/admin/logout}" class="nav-link">Logout</a></li>
-			</ul>
+		<div th:insert="/admin/fragment/sidebar :: navbar"></div>
 
-		</nav>
-		<!-- /.navbar -->
-
-		<!-- Main Sidebar Container -->
-		<aside class="main-sidebar sidebar-dark-primary elevation-4">
-			<!-- Brand Logo -->
-			<a th:href="@{/admin}" class="brand-link"> <img
-				src="/admin/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
-				class="brand-image img-circle elevation-3" style="opacity: .8">
-				<span class="brand-text font-weight-light">Admin</span>
-			</a>
-
-			<!-- Sidebar -->
-			<div class="sidebar">
-				<!-- Sidebar user panel (optional) -->
-				<div class="user-panel mt-3 pb-3 mb-3 d-flex">
-					<div class="image">
-						<img src="/admin/dist/img/user2-160x160.jpg"
-							class="img-circle elevation-2" alt="User Image">
-					</div>
-					<div class="info">
-						<a href="#"
-							sec:authentication="principal.username" class="d-block"></a>
-					</div>
-				</div>
-
-
-				<!-- Sidebar Menu -->
-				<nav class="mt-2">
-					<ul class="nav nav-pills nav-sidebar flex-column"
-						data-widget="treeview" role="menu" data-accordion="false">
-						<!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
-
-						<li class="nav-item"><a href="#" class="nav-link"> <i
-								class="nav-icon fas fa-edit"></i>
-								<p>
-									Users <i class="fas fa-angle-left right"></i>
-								</p>
-						</a>
-							<ul class="nav nav-treeview">
-								<li class="nav-item"><a th:href="@{/admin/users}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>List</p>
-								</a></li>
-								<li class="nav-item"><a th:href="@{/admin/users/add-user}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>Add</p>
-								</a></li>
-							</ul></li>
-
-						<li class="nav-item"><a href="#" class="nav-link"> <i
-								class="nav-icon fas fa-edit"></i>
-								<p>
-									Categories <i class="fas fa-angle-left right"></i>
-								</p>
-						</a>
-							<ul class="nav nav-treeview">
-								<li class="nav-item"><a th:href="@{/admin/categories}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>List</p>
-								</a></li>
-								<li class="nav-item"><a
-									th:href="@{/admin/categories/add-category}" class="nav-link">
-										<i class="far fa-circle nav-icon"></i>
-										<p>Add</p>
-								</a></li>
-							</ul></li>
-
-						<li class="nav-item"><a href="#" class="nav-link"> <i
-								class="nav-icon fas fa-edit"></i>
-								<p>
-									Products <i class="fas fa-angle-left right"></i>
-								</p>
-						</a>
-							<ul class="nav nav-treeview">
-								<li class="nav-item"><a th:href="@{/admin/products}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>List</p>
-								</a></li>
-								<li class="nav-item"><a
-									th:href="@{/admin/products/add-product}" class="nav-link">
-										<i class="far fa-circle nav-icon"></i>
-										<p>Add</p>
-								</a></li>
-							</ul></li>
-
-						<li class="nav-item"><a href="#" class="nav-link"> <i
-								class="nav-icon fas fa-edit"></i>
-								<p>
-									Carts <i class="fas fa-angle-left right"></i>
-								</p>
-						</a>
-							<ul class="nav nav-treeview">
-								<li class="nav-item"><a th:href="@{/admin/carts}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>List</p>
-								</a></li>
-								<li class="nav-item"><a th:href="@{/admin/carts/add-cart}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>Add</p>
-								</a></li>
-							</ul></li>
-
-						<li class="nav-item"><a href="#" class="nav-link"> <i
-								class="nav-icon fas fa-edit"></i>
-								<p>
-									Orders <i class="fas fa-angle-left right"></i>
-								</p>
-						</a>
-							<ul class="nav nav-treeview">
-								<li class="nav-item"><a th:href="@{/admin/orders}"
-									class="nav-link"> <i class="far fa-circle nav-icon"></i>
-										<p>List</p>
-								</a></li>
-								<li class="nav-item"><a
-									th:href="@{/admin/orders/add-order}" class="nav-link"> <i
-										class="far fa-circle nav-icon"></i>
-										<p>Add</p>
-								</a></li>
-							</ul></li>
-
-					</ul>
-				</nav>
-				<!-- /.sidebar-menu -->
-			</div>
-			<!-- /.sidebar -->
-		</aside>
-
-		<!-- Content Wrapper. Contains page content -->
+		<aside th:insert="/admin/fragment/sidebar :: sidebar"></aside>
+		
+		
 		<div class="content-wrapper">
 
 			<div class="content-header">
@@ -221,13 +80,15 @@
 					</div>
 					<!-- /.card-header -->
 					<!-- form start -->
+					<div th:if="${error != null}" th:text="${error}"
+						class="mt-3 alert alert-danger"></div>
 					<form th:action="@{/admin/users/edit-user/{id}(id=${userDTO.id})}"
 						method="post" th:object="${userDTO}">
 						<div class="card-body">
 							<div class="form-group">
 								<label for="exampleInputEmail1">Username</label> <input
 									type="text" class="form-control" name="username"
-									th:field="*{username}" placeholder="Enter username">
+									th:field="*{username}" placeholder="Enter username" required>
 							</div>
 
 							<div class="form-group">
@@ -239,7 +100,7 @@
 							<div class="form-group">
 								<label for="exampleInputEmail1">Email</label> <input
 									type="email" class="form-control" name="email"
-									th:field="*{email}" placeholder="Enter email">
+									th:field="*{email}" placeholder="Enter email" required>
 							</div>
 
 							<div class="form-group">
@@ -262,17 +123,9 @@
 			</section>
 
 		</div>
-		<!-- /.content-wrapper -->
-		<footer class="main-footer">
-			<strong>Made by &nbsp <a href="https://fb.com/hoangxq2k1">Nguyen
-					Huy Hoang</a>&nbsp ...
-			</strong>
-			<div class="float-right d-none d-sm-inline-block">
-				<b>2022</b>
-			</div>
-		</footer>
-
-		<!-- Control Sidebar -->
+		
+		<div th:insert="/admin/fragment/sidebar :: footer"></div>
+		
 		<aside class="control-sidebar control-sidebar-dark">
 			<!-- Control sidebar content goes here -->
 		</aside>
